--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,8 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
 file.reference.gson-2.10.1.jar=../../../Desktop/programmation 3/Projet professeur/webSession&Chart/web/web/WEB-INF/lib/gson-2.10.1.jar
+file.reference.jbcrypt-0.4.jar=web/WEB-INF/lib/jbcrypt-0.4.jar
+file.reference.mail-1.4.4.jar=web/WEB-INF/lib/mail-1.4.4.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -46,7 +48,9 @@ javac.classpath=\
     ${libs.hibernate4-persistence.classpath}:\
     ${libs.MySQLDriver.classpath}:\
     ${libs.hibernate4-support.classpath}:\
-    ${file.reference.gson-2.10.1.jar}
+    ${file.reference.gson-2.10.1.jar}:\
+    ${file.reference.mail-1.4.4.jar}:\
+    ${file.reference.jbcrypt-0.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
